# forge

./: .coverage.Mac-mini.local.63374.XozWzOqx  .env.example  .gitignore  CLAUDE.md  README.md  forge-build.sh  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODEGEN_SETUP.md  DEVELOPMENT_NOTES.md  FAILURE_ANALYSIS_SYSTEM.md  GIT_WORKFLOWS.md  PROGRAMMATIC_API.md  QUICKSTART.md  README.md  REPOSITORY_SETUP_SOLUTION.md  TROUBLESHOOTING.md
knowledgeforge/: 00_Project_Instructions.md  01_Navigator_Agent.md  02_Builder_Agent.md  03_Coordination_Patterns.md  04_Specification_Templates.md  05_Expert_Agent_Example.md  06_Quick_Reference.md
patterns/: 00_KB3_AIPatterns.md  00_KB3_API_Definitions.md  00_KB3_AgentInstructions.md  00_KB3_Claude_Projects.md  00_KB3_Core.md  00_KB3_Examples.md  00_KB3_Fundamentals.md  00_KB3_ImplementationGuide.md  00_KB3_ImplementationGuide_3.2_GitIntegration.md  00_KB3_Monitoring.md  00_KB3_N8N_Integration.md  00_KB3_Navigation.md  00_KB3_Operations.md  00_KB3_Templates.md  00_KB3_Troubleshooting.md  00_KB3_Workflow_Templates.md  01_Core_DataTransfer.md  02_Workflows_Agents.md  02_Workflows_Knowledge.md  02_Workflows_Orchestration.md  03_Agents_Catalog.md  03_KB3_Agents_AgentBuilder.md  03_KB3_Agents_IncantationPreserver.md  03_KB3_Agents_Navigator.md  03_KB3_Agents_VersionControl.md  04_TestScenarios.md  04_TestScenarios_GitIntegration.md  README.md
scripts/: analyze_agent_logs.py  check_agent_run.py  check_codegen_repos.py  check_repo_status.py  list_repos.py  setup_codegen_repo.md  setup_repository.py  test_codegen_api.py  (+2 more)
(+98 files in other folders)
